--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
       </section>
       <br />
       <section id="into">
-        <p>
+        <p id="hello">
           Hello there.
           <br />
           This is my portfolio. I'm a highshooler who is currently learning Web
