Added a ton more IDs and Classes, organized the intro paragraph, and added a little hover affect to the word CODE.

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,47 +8,51 @@
     <title>Project Portfolio</title>
   </head>
   <body>
-    <div id="container">
-      <section id="who">
-        <h1>Kevin Petrishin</h1>
-        <p id="p1">The adventureous jounry of a Future Web Developer</p>
+    <div class="container1">
+      <section class="who">
+        <h1 id="name">Kevin Petrishin</h1>
+        <p id="journey">The adventureous journey of a Future Web Developer</p>
       </section>
-      <br />
-      <section id="into">
-        <p id="hello">
-          Hello there.
-          <br />
+    </div>
+    <br />
+    <div class="containter2">
+      <section class="into">
+        <p id="introP1">Hello there.</p>
+        <p id="introP2">
           This is my portfolio. I'm a highshooler who is currently learning Web
           Dev.
-          <br />
-          Hoping to get into the wonderful world of CODE.
+        </p>
+        <p id="introP3">
+          Hoping to get into the wonderful world of <span id="code">CODE</span>.
         </p>
       </section>
     </div>
-    <section id="objectives">
-      <h2>Objectives&#58;</h2>
-      <ul>
-        <li>Finish my 60hr. Web Dev course before Septmeber 1, 2022.</li>
-        <li>Start Web Dev freelancing June 1, 2022.</li>
-        <li>Get a part time as a Web Devloper by end of 2022.</li>
+    <section class="objectives">
+      <h2 id="obh2">Objectives&#58;</h2>
+      <ul class="objectiveslist">
+        <li id="oblist1">
+          Finish my 60hr. Web Dev course before Septmeber 1, 2022.
+        </li>
+        <li id="oblist2">Start Web Dev freelancing June 1, 2022.</li>
+        <li id="oblist3">Get a part time as a Web Devloper by end of 2022.</li>
       </ul>
     </section>
-    <section id="projects">
-      <h2>Projects&#58;</h2>
-      <ul>
-        <li>Currently None :(</li>
+    <section class="projects">
+      <h2 id="proh2">Projects&#58;</h2>
+      <ul class="projectslist">
+        <li id="prolist1">Currently None :(</li>
       </ul>
     </section>
-    <section id="languages">
-      <h2>Current Launges I know&#58;</h2>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
+    <section class="languages">
+      <h2 id="lanh2">Current Launges I know&#58;</h2>
+      <ul class="languageslist">
+        <li id="lanli1">HTML</li>
+        <li id="lanli2">CSS</li>
       </ul>
     </section>
-    <section id="about">
+    <section class="about">
       <h2>About&#58;</h2>
-      <p>
+      <p id="">
         I'm a 16 year old who lives in wonderful Florida, Sarasota. Currently
         doing 10th grade.
         <br />
