Finally centered Container1

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -16,7 +16,7 @@
     </div>
     <br />
     <div class="containter2">
-      <section class="into">
+      <section class="intro">
         <p id="introP1">Hello there.</p>
         <p id="introP2">
           This is my portfolio. I'm a highshooler who is currently learning Web
