Changed the color scheme of the page entirely; and center the objectives section

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -27,20 +27,24 @@
         </p>
       </section>
     </div>
-    <section class="objectives">
-      <h2 id="obh2">Objectives&#58;</h2>
-      <ul class="objectiveslist">
-        <li id="oblist1">
-          Finish my 60hr. Web Dev course before Septmeber 1, 2022.
-        </li>
-        <li id="oblist2">Start Web Dev freelancing June 1, 2022.</li>
-        <li id="oblist3">Get a part time as a Web Devloper by end of 2022.</li>
-      </ul>
-    </section>
+    <div class="container3">
+      <section class="objectives">
+        <h2 id="obh2">Objectives&#58;</h2>
+        <ul class="objectiveslist">
+          <li id="oblist1">
+            Finish my 60hr. Web Dev course before Septmeber 1, 2022.
+          </li>
+          <li id="oblist2">Start Web Dev freelancing June 1, 2022.</li>
+          <li id="oblist3">
+            Get a part time as a Web Devloper by end of 2022.
+          </li>
+        </ul>
+      </section>
+    </div>
     <section class="projects">
       <h2 id="proh2">Projects&#58;</h2>
       <ul class="projectslist">
-        <li id="prolist1">Currently None :(</li>
+        <li id="prolist1">Currently None</li>
       </ul>
     </section>
     <section class="languages">
