Fixed a couple typos and cleaned up the objectives section

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -32,11 +32,11 @@
         <h2 id="obh2">Objectives&#58;</h2>
         <ul class="objectiveslist">
           <li id="oblist1">
-            Finish my 60hr. Web Dev course before Septmeber 1, 2022.
+            Finish my 60hr. Web Dev course before April 10, 2022.
           </li>
           <li id="oblist2">Start Web Dev freelancing June 1, 2022.</li>
           <li id="oblist3">
-            Get a part time as a Web Devloper by end of 2022.
+            Get a part time as a Web Devloper by the end of 2022.
           </li>
         </ul>
       </section>
