Centered the rest of the sections on the page, changed the margin to padding inside the containers, and added spacing between the sections

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -41,31 +41,37 @@
         </ul>
       </section>
     </div>
-    <section class="projects">
-      <h2 id="proh2">Projects&#58;</h2>
-      <ul class="projectslist">
-        <li id="prolist1">Currently None</li>
-      </ul>
-    </section>
-    <section class="languages">
-      <h2 id="lanh2">Current Launges I know&#58;</h2>
-      <ul class="languageslist">
-        <li id="lanli1">HTML</li>
-        <li id="lanli2">CSS</li>
-      </ul>
-    </section>
-    <section class="about">
-      <h2>About&#58;</h2>
-      <p id="">
-        I'm a 16 year old who lives in wonderful Florida, Sarasota. Currently
-        doing 10th grade.
-        <br />
-        I starting learning Code on July 20, 2021. Leanred HTML, now learning
-        CSS.
-        <br />
-        I've got a long jounrey ahead, but I am ready for anything in my path to
-        success.
-      </p>
-    </section>
+    <div class="container4">
+      <section class="projects">
+        <h2 id="proh2">Projects&#58;</h2>
+        <ul class="projectslist">
+          <li id="prolist1">Currently None</li>
+        </ul>
+      </section>
+    </div>
+    <div class="container5">
+      <section class="languages">
+        <h2 id="lanh2">Current Launges I know&#58;</h2>
+        <ul class="languageslist">
+          <li id="lanli1">HTML</li>
+          <li id="lanli2">CSS</li>
+        </ul>
+      </section>
+    </div>
+    <div class="container6">
+      <section class="about">
+        <h2 id="abh2">About&#58;</h2>
+        <p id="aboutparagraph">
+          I'm a 16 year old who lives in wonderful Florida, Sarasota. Currently
+          doing 10th grade.
+          <br />
+          I starting learning Code on July 20, 2021. Leanred HTML, now learning
+          CSS.
+          <br />
+          I've got a long jounrey ahead, but I am ready for anything in my path
+          to success.
+        </p>
+      </section>
+    </div>
   </body>
 </html>
