Fixed minor typos

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -51,7 +51,7 @@
     </div>
     <div class="container5">
       <section class="languages">
-        <h2 id="lanh2">Current Launges I know&#58;</h2>
+        <h2 id="lanh2">Current Languages I know&#58;</h2>
         <ul class="languageslist">
           <li id="lanli1">HTML</li>
           <li id="lanli2">CSS</li>
@@ -65,7 +65,7 @@
           I'm a 16 year old who lives in wonderful Florida, Sarasota. Currently
           doing 10th grade.
           <br />
-          I starting learning Code on July 20, 2021. Leanred HTML, now learning
+          I starting learning Code on July 20, 2021. Learned HTML, now learning
           CSS.
           <br />
           I've got a long jounrey ahead, but I am ready for anything in my path
