Gave a little hover transition to the word CODE. Also added a fixed quote to the top left of a screen with a border style of: outset

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,7 +23,18 @@
           Dev.
         </p>
         <p id="introP3">
-          Hoping to get into the wonderful world of <span id="code">CODE</span>.
+          Hoping to get into the wonderful world of
+          <span id="code">CODE</span>.
+        </p>
+      </section>
+    </div>
+    <div class="quotecontainer">
+      <section class="quotes">
+        <p id="quote1">
+          Train like you've <br />
+          never won, <br />
+          but play like <br />
+          you've never lost.
         </p>
       </section>
     </div>
