Decreased the size of the H1 and moved the H1 to the left. Also added more padding between all of the containers.

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -56,7 +56,7 @@
       <section class="projects">
         <h2 id="proh2">Projects&#58;</h2>
         <ul class="projectslist">
-          <li id="prolist1">Currently None</li>
+          <li id="prolist1">Loading....</li>
         </ul>
       </section>
     </div>
