Fixed container 1 translation. I put it in a better spot. Did it wrong the first time.:

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,7 +17,7 @@
     <br />
     <div class="containter2">
       <section class="intro">
-        <p id="introP1">Hello there.</p>
+        <p id="introP1">Hello there,</p>
         <p id="introP2">
           This is my portfolio. I'm a highshooler who is currently learning Web
           Dev.
