Added a super clean background image for a more pleasant look

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -54,8 +54,8 @@
       <section class="languages">
         <h2 id="lanh2">Current Languages I know&#58;</h2>
         <ul class="languageslist">
-          <li id="lanli1">HTML</li>
-          <li id="lanli2">CSS</li>
+          <li id="lan1">HTML</li>
+          <li id="lan2">CSS</li>
         </ul>
       </section>
     </div>
